# Banks_Argentina_Visualization

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: smoke-test.yml  update-data.yml
.streamlit/: config.toml
app/: Home.py
app/components/: __init__.py  filtros.py
app/pages/: 1_Sistema.py  1_🏛️_Sistema.py  2_Credito_Dolares.py  2_Credito_Pesos.py  2_Demanda_y_Mora.py  2_🏦_Por_Banco.py  3_Credito_Dolares.py  3_Encajes.py  3_Por_Banco.py  3_⚖️_Comparador.py  4_Cartera_Titulos.py  4_Credito_Dolares.py  4_Demanda_y_Mora.py  4_🗺️_Mapa.py  5_Credito_Pesos.py  6_Cartera_Titulos.py  6_Comparador.py  6_Por_Banco.py  7_Encajes.py  7_Por_Banco.py  8_Comparador.py  9_Mapa.py
data/curated/dimensiones/: dim_cuentas.parquet  dim_entidades.parquet  dim_grupos.parquet  dim_provincias.parquet
data/curated/paneles/: panel_actividad_grupo.parquet  panel_actividad_localidad.parquet  panel_balance_agregados.parquet  panel_distribgeo.parquet  panel_esd.parquet  panel_estructura.parquet  panel_indicadores.parquet  panel_sucursales_provincia.parquet
docs/: AUTOMATIZACION.md  CONTABILIDAD.md
scripts/: audit_balance.py  download_bcra_api.py  download_bcra_ief.py  download_indec_ipc.py  process_ief.py  sync_curated.py  update_data.py
src/banks_arg_viz/: __init__.py  paths.py  theme.py
src/banks_arg_viz/geo/: __init__.py  provincias.py
src/banks_arg_viz/io/: __init__.py  loaders.py
src/banks_arg_viz/kpis/: __init__.py  balance.py  credito.py  foreign_currency.py  indicators.py  mora.py  reservas.py  (+1 more)
tests/: test_accounting.py  test_smoke.py
(+3 files in other folders)
